# base

./: CMakeLists.txt  build.sh
cli/src/: data.xml  main.cpp
client/: CMakeLists.txt
client/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: network.h  networkProxy.h  parser_xml.h  pch.h
engine/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
